config/system/iptables-rules.v4
# Generated by iptables-save v1.8.10 (nf_tables) on Sat Dec  6 18:11:00 2025
*filter
:INPUT ACCEPT [5:260]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [5:712]
-A INPUT -p tcp -m tcp --dport 10015 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 10012 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 10011 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 10008 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 10007 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 10006 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 10005 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 10004 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 10003 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 10002 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 10001 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 10000 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 3128 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 1194 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 109 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 169 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 88 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 68 -j ACCEPT
-A INPUT -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -p udp -m udp --dport 2200 -j ACCEPT
-A INPUT -p udp -m udp --dport 2100 -j ACCEPT
-A INPUT -p udp -m udp --dport 5300 -j ACCEPT
-A INPUT -p udp -m udp --dport 7100 -j ACCEPT
-A INPUT -p udp -m udp --dport 7200 -j ACCEPT
-A INPUT -p udp -m udp --dport 7300 -j ACCEPT
-A FORWARD -m string --string "BitTorrent" --algo bm -j DROP
-A FORWARD -m string --string "BitTorrent protocol" --algo bm -j DROP
-A FORWARD -m string --string "peer_id=" --algo bm -j DROP
-A FORWARD -m string --string ".torrent" --algo bm -j DROP
-A FORWARD -m string --string "announce.php?passkey=" --algo bm -j DROP
-A FORWARD -m string --string "torrent" --algo bm -j DROP
-A FORWARD -m string --string "announce" --algo bm -j DROP
-A FORWARD -m string --string "info_hash" --algo bm -j DROP
-A FORWARD -m string --string "/default.ida?" --algo bm -j DROP
-A FORWARD -m string --string ".exe?/c+dir" --algo bm -j DROP
-A FORWARD -m string --string ".exe?/c_tftp" --algo bm -j DROP
-A FORWARD -m string --string "peer_id" --algo kmp -j DROP
-A FORWARD -m string --string "BitTorrent" --algo kmp -j DROP
-A FORWARD -m string --string "BitTorrent protocol" --algo kmp -j DROP
-A FORWARD -m string --string "bittorrent-announce" --algo kmp -j DROP
-A FORWARD -m string --string "announce.php?passkey=" --algo kmp -j DROP
-A FORWARD -m string --string "find_node" --algo kmp -j DROP
-A FORWARD -m string --string "info_hash" --algo kmp -j DROP
-A FORWARD -m string --string "get_peers" --algo kmp -j DROP
-A FORWARD -m string --string "announce" --algo kmp -j DROP
-A FORWARD -m string --string "announce_peers" --algo kmp -j DROP
-A FORWARD -m string --string "get_peers" --algo bm -j DROP
-A FORWARD -m string --string "announce_peer" --algo bm -j DROP
-A FORWARD -m string --string "find_node" --algo bm -j DROP
-A FORWARD -m string --string "BitTorrent" --algo bm -j DROP
-A FORWARD -m string --string "BitTorrent protocol" --algo bm -j DROP
-A FORWARD -m string --string "peer_id=" --algo bm -j DROP
-A FORWARD -m string --string ".torrent" --algo bm -j DROP
-A FORWARD -m string --string "announce.php?passkey=" --algo bm -j DROP
-A FORWARD -m string --string "torrent" --algo bm -j DROP
-A FORWARD -m string --string "announce" --algo bm -j DROP
-A FORWARD -m string --string "info_hash" --algo bm -j DROP
COMMIT
# Completed on Sat Dec  6 18:11:00 2025
# Generated by iptables-save v1.8.10 (nf_tables) on Sat Dec  6 18:11:00 2025
*nat
:PREROUTING ACCEPT [4:256]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -i enx3 -p udp -m udp --dport 53 -j REDIRECT --to-ports 5300
-A POSTROUTING -s 10.8.0.0/24 -o enx3 -j MASQUERADE
-A POSTROUTING -s 20.8.0.0/24 -o enx3 -j MASQUERADE
COMMIT
# Completed on Sat Dec  6 18:11:00 2025
